[gd_scene load_steps=14 format=3 uid="uid://ykimlxn2kbwu"]

[ext_resource type="Shader" path="res://shader/Outline.gdshader" id="1_1pwyj"]
[ext_resource type="Script" path="res://script/tuto_area2d.gd" id="1_3feq6"]
[ext_resource type="Texture2D" uid="uid://iyga3w6hcmq" path="res://asset/sheet/building1-sheet.png" id="2_kaky0"]
[ext_resource type="Texture2D" uid="uid://bmdqtimyuxiwo" path="res://asset/sprite/dust.png" id="4_c8ug4"]
[ext_resource type="Theme" uid="uid://cjnwflv66k2s4" path="res://asset/Theme.tres" id="5_4bwav"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qfwvy"]
resource_local_to_scene = true
shader = ExtResource("1_1pwyj")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="Animation" id="Animation_4m7oa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_manur"]
resource_name = "build"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 34), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gw0pp"]
resource_name = "destroy"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 34)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2a31t"]
_data = {
"RESET": SubResource("Animation_4m7oa"),
"build": SubResource("Animation_manur"),
"destroy": SubResource("Animation_gw0pp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_au8db"]
size = Vector2(64, 64)

[sub_resource type="Curve" id="Curve_cowa4"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_g3t87"]
offsets = PackedFloat32Array(0.709091, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Area2D" type="Area2D"]
position = Vector2(128, 160)
script = ExtResource("1_3feq6")

[node name="DemoSprite2" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qfwvy")
texture = ExtResource("2_kaky0")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="DemoSprite2"]
libraries = {
"": SubResource("AnimationLibrary_2a31t")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_au8db")

[node name="Tooltip" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
tooltip_text = "A techno-organic building.
Nobody knwos how it works."
theme = ExtResource("5_4bwav")

[node name="DustParticule" type="CPUParticles2D" parent="."]
visible = false
position = Vector2(0, 32)
texture = ExtResource("4_c8ug4")
emission_shape = 3
emission_rect_extents = Vector2(34, 1)
gravity = Vector2(0, -100)
damping_max = 10.0
angle_max = 180.0
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_cowa4")
color_ramp = SubResource("Gradient_g3t87")

[node name="Destroy" type="Button" parent="."]
visible = false
offset_left = 40.0
offset_top = -16.0
offset_right = 112.0
offset_bottom = 19.0
theme = ExtResource("5_4bwav")
text = "Destroy"

[node name="Build" type="Button" parent="."]
visible = false
offset_left = 32.0
offset_top = -16.0
offset_right = 131.0
offset_bottom = 15.0
theme = ExtResource("5_4bwav")
text = "Build a Well"

[connection signal="gui_input" from="Tooltip" to="." method="_on_control_gui_input"]
[connection signal="mouse_entered" from="Tooltip" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Tooltip" to="." method="_on_control_mouse_exited"]
[connection signal="pressed" from="Destroy" to="." method="_on_destroy_pressed"]
[connection signal="pressed" from="Build" to="." method="_on_build_pressed"]
